@@ -196,6 +196,8 @@
  * 04-Jan-2008 : Fix for quadrant painting error - see patch 1849564 (DG);
  * 25-Mar-2008 : Added new methods with optional notification - see patch
  *               1913751 (DG);
+ * 07-Apr-2008 : Fixed NPE in removeDomainMarker() and 
+ *               removeRangeMarker() (DG);
  * 
  */
 
@@ -2279,12 +2281,15 @@ public class XYPlot extends Plot implements ValueAxisPlot, Zoomable,
     		boolean notify) {
         ArrayList markers;
         if (layer == Layer.FOREGROUND) {
-            markers = (ArrayList) this.foregroundDomainMarkers.get(new Integer(
-                    index));
+            markers = (ArrayList) this.foregroundDomainMarkers.get(
+            		new Integer(index));
         }
         else {
-            markers = (ArrayList) this.backgroundDomainMarkers.get(new Integer(
-                    index));
+            markers = (ArrayList) this.backgroundDomainMarkers.get(
+            		new Integer(index));
+        }
+        if (markers == null) {
+        	return false;
         }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
@@ -2515,14 +2520,16 @@ public class XYPlot extends Plot implements ValueAxisPlot, Zoomable,
         }
         ArrayList markers;
         if (layer == Layer.FOREGROUND) {
-            markers = (ArrayList) this.foregroundRangeMarkers.get(new Integer(
-                    index));
+            markers = (ArrayList) this.foregroundRangeMarkers.get(
+            		new Integer(index));
         }
         else {
-            markers = (ArrayList) this.backgroundRangeMarkers.get(new Integer(
-                    index));
+            markers = (ArrayList) this.backgroundRangeMarkers.get(
+                    new Integer(index));
         }
-
+        if (markers == null) {
+        	return false;
+        }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
             fireChangeEvent();
