@@ -1,5 +1,14 @@
 2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/plot/CategoryPlot.java
+    (removeDomainMarker): Check for null collection,
+    (removeRangeMarker): Likewise,
+    * source/org/jfree/chart/plot/XYPlot.java
+    (removeDomainMarker): Check for null collection,
+    (removeRangeMarker): Likewise.
+
+2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/DefaultKeyedValue.java
     (equals): Simplified to reflect that this.key is never null.
 
